# pose_covariance_ros

./: .OLD_coverage.sh  .coverage.sh  OLDsonar-project.properties  sonar-project.properties
.github/workflows/: build.yml
pose_covariance_ros/: CMakeLists.txt  package.xml
pose_covariance_ros/config/: config.yaml  test.yaml
pose_covariance_ros/include/: compute  output_ikfast61.cpp
pose_covariance_ros/include/pose_covariance_ros/: pose_covariance_ros.hpp  pose_covariance_ros_optimization.hpp
pose_covariance_ros/include/pose_lie/: pose_lie.hpp
pose_covariance_ros/launch/: run.launch  run_opt.launch  run_opt_template.launch  test_mc.launch
pose_covariance_ros/msg/: opt_return.msg
pose_covariance_ros/scripts/: test.py
pose_covariance_ros/src/: pose_covariance_ros.cpp  pose_covariance_ros_node.cpp  pose_covariance_ros_node_optimization.cpp  pose_covariance_ros_optimization.cpp  pose_lie.cpp
pose_covariance_ros/srv/: srv_opt.srv
pose_covariance_ros/test/: test.launch  test0.cpp
